@@ -64,6 +64,27 @@ End
       !b
     END
     assert_raise(ArgumentError) { ObjectSpace.define_finalizer([], Object.new) }
+    fin = Struct.new(:garbage).new
+    class << fin
+      alias call garbage=
+    end
+    assertion = proc do
+      fin.garbage = nil
+      assert_nothing_raised(ArgumentError) {
+        EnvUtil.under_gc_stress do
+          3.times do
+            ObjectSpace.define_finalizer([], fin)
+          end
+          GC.start
+        end
+      }
+      assert_not_nil(fin.garbage)
+    end
+    assertion.call
+    class << fin
+      private :call
+    end
+    assertion.call
   end
 
   def test_each_object
